...

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

            <ImageView
                android:id="@+id/detail_tv_show_backdrop"
                android:layout_width="0dp"
                android:layout_height="200dp"
...

                    <ImageView
                        android:id="@+id/detail_tv_show_poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                <TextView
                    android:id="@+id/detail_tv_show_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/detail_tv_show_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/detail_tv_show_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:paddingVertical="4dp"
                    android:textColor="@android:color/darker_gray"
                    app:layout_constraintBottom_toTopOf="@+id/detail_tv_show_duration"
                    app:layout_constraintStart_toEndOf="@+id/progress_bar"
                    app:layout_constraintTop_toTopOf="@id/progress_bar"
...

            <TextView
                android:id="@+id/detail_tv_show_tag_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <ru.embersoft.expandabletextview.ExpandableTextView
                android:id="@+id/detail_tv_show_overview"
                style="@style/contentDetail"
                app:etv_animationTime="20"
...

            <TextView
                android:id="@+id/detail_tv_show_original_title"
                style="@style/contentDetail"
                app:layout_constraintStart_toStartOf="parent"
...

            <!--            <TextView-->
            <!--                android:id="@+id/detail_tv_show_language"-->
            <!--                style="@style/contentDetail"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
...

            <!--            <TextView-->
            <!--                android:id="@+id/detail_tv_show_genre"-->
            <!--                style="@style/contentDetail"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
...

            <TextView
                android:id="@+id/detail_tv_show_season"
                style="@style/contentDetail"
                app:layout_constraintStart_toStartOf="parent"
...

            <TextView
                android:id="@+id/detail_tv_show_last_date"
                style="@style/contentDetail"
                app:layout_constraintStart_toStartOf="parent"
...

            <TextView
                android:id="@+id/detail_tv_show_type"
                style="@style/contentDetail"
                app:layout_constraintStart_toStartOf="parent"
...

            <TextView
                android:id="@+id/detail_tv_show_status"
                style="@style/contentDetail"
                app:layout_constraintStart_toStartOf="parent"
...

            <TextView
                android:id="@+id/detail_tv_show_homepage"
                style="@style/contentDetail"
                app:layout_constraintStart_toStartOf="parent"
...
