...

            <ImageView
                android:id="@+id/detail_movie_backdrop"
                android:layout_width="0dp"
                android:layout_height="200dp"
...

                    <ImageView
                        android:id="@+id/detail_movie_poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                <TextView
                    android:id="@+id/detail_movie_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/detail_movie_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/detail_movie_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:paddingVertical="4dp"
                    android:textColor="@android:color/darker_gray"
                    app:layout_constraintBottom_toTopOf="@+id/detail_movie_duration"
                    app:layout_constraintStart_toEndOf="@+id/progress_bar"
                    app:layout_constraintTop_toTopOf="@id/progress_bar"
...

            <TextView
                android:id="@+id/detail_movie_tag_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <ru.embersoft.expandabletextview.ExpandableTextView
                android:id="@+id/detail_movie_overview"
                style="@style/contentDetail"
                app:etv_animationTime="20"
...

            <TextView
                android:id="@+id/detail_movie_original_title"
                style="@style/contentDetail"
                app:layout_constraintStart_toStartOf="parent"
...

            <!--            <TextView-->
            <!--                android:id="@+id/detail_movie_language"-->
            <!--                style="@style/contentDetail"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
...

            <!--            <TextView-->
            <!--                android:id="@+id/detail_movie_genre"-->
            <!--                style="@style/contentDetail"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
...

            <TextView
                android:id="@+id/detail_movie_budget"
                style="@style/contentDetail"
                app:layout_constraintStart_toStartOf="parent"
...

            <TextView
                android:id="@+id/detail_movie_revenue"
                style="@style/contentDetail"
                app:layout_constraintStart_toStartOf="parent"
...

            <TextView
                android:id="@+id/detail_movie_status"
                style="@style/contentDetail"
                app:layout_constraintStart_toStartOf="parent"
...

            <TextView
                android:id="@+id/detail_movie_homepage"
                style="@style/contentDetail"
                app:layout_constraintStart_toStartOf="parent"
...
